--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@ layout: default
 ---
 
 <header>
+<div class="logo">
+  <img src="img/logo-jccs.png"  />
+</div>
+
   <div class="header-content">
     <div class="header-content-inner">
+
       <h1 id="winner">Tirage</h1>
       <hr>
 
