--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
       <h1 id="winner">Tirage</h1>
       <hr>
 
-      <a href="#" id="start" class="btn btn-primary btn-xl">I'm Feeling Lucky</a>
+      <a href="#" id="start" class="btn btn-primary btn-xl">Faites vos jeux</a>
     </div>
   </div>
 
